stub out projects page and convert about page to md

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,6 +12,9 @@
               <a href="/about/">About</a>
             </li>
             <li class="nav__item">
+              <a href="/projects/">Projects</a>
+            </li>
+            <li class="nav__item">
               <a href="/posts/">Posts</a>
             </li>
           </ul>
@@ -29,6 +32,7 @@
       <section class="homepage-content__section">
         <h2 class="homepage-content__section-heading">Projects</h2>
         <p>I have made lots of things some things I have made include...</p>
+        <a class="cta" href="/projects/">More projects<span class="cta__decoration" aria-hidden="true"></span></a>
       </section>
       <section class="homepage-content__section">
         <h2 class="homepage-content__section-heading">Recent posts</h2>
