--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -8,6 +8,9 @@
 				<a href="/about/">About</a>
 			</li>
 			<li class="nav__item">
+				<a href="/projects/">Projects</a>
+			</li>
+			<li class="nav__item">
 				<a href="/posts/">Posts</a>
 			</li>
 		</ul>
