--- a/assets/sass/components/post.scss
+++ b/assets/sass/components/post.scss
@@ -58,7 +58,7 @@
 	margin-top: 3em;
 
 	&::before {
-	  content: '▰';
+	  content: '▰ ▰';
 		text-align: center;
 		display: block;
 		margin-bottom: 3em;
