--- a/assets/sass/base/defaults.scss
+++ b/assets/sass/base/defaults.scss
@@ -2,10 +2,10 @@
   --accent-1: #c61905;
   --accent-2: #0646df;
   --background: white;
-  --foreground: #242427;
+  --foreground: #121213;
 
   @media (prefers-color-scheme: dark) {
-    --background: #242427;
+    --background: #121213;
     --foreground: white;
   }
 }
@@ -50,7 +50,7 @@ figure {
 
   img {
     display: block;
-    box-shadow: 0.333333em 0.333333em 0 0 black;
+    box-shadow: 0.333333em 0.333333em 0 0 rgba(0, 0, 0, 0.9);
   }
 
   figcaption {
