--- a/assets/sass/common/decoration.scss
+++ b/assets/sass/common/decoration.scss
@@ -13,7 +13,7 @@
 		width: 100%;
 		height: 100%;
 		z-index: -1;
-		background-color: black;
+		background-color: rgba(0, 0, 0, 0.9);
 		bottom: $border-width * -2;
 		right: $border-width * -2;
 	}
@@ -38,7 +38,7 @@
 		left: 0;
 		z-index: -1;
 		border-radius: inherit;
-		background: linear-gradient(to bottom, var(--accent-1), var(--accent-2));
+		background: linear-gradient(to bottom, var(--accent-1) 20%, var(--accent-2) 80%);
 	}
 }
 
