--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -4,7 +4,15 @@
   	<article class="post">
   		<div class="post__header">
 		  	<h1 class="post__headline">{{.Title}}</h1>
-		  	<time class="post__dateline" datetime="{{.Date}}">{{.Date.Format "1 January 2006"}}</time>
+		  	<time class="post__dateline" datetime="{{.Date}}">{{.Date.Format "2 January 2006"}}</time>
+        {{ if .Params.featured_image }}
+        <figure>
+          <img class="post__featured-image" alt="{{ if .Params.featured_image_alt }}{{.Params.featured_image_alt}}{{end}}" src="/post_images/{{.Params.featured_image}}">
+          {{ if .Params.featured_image_caption }}
+          <figcaption class="post__featured-image-caption">{{.Params.featured_image_caption}}</figcaption>
+          {{ end }}
+        </figure>
+        {{ end }}
 		  </div>
       <div class="post__content">
 	  	  {{.Content}}
