--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -7,7 +7,7 @@
 		  	<time class="post__dateline" datetime="{{.Date}}">{{.Date.Format "2 January 2006"}}</time>
         {{ if .Params.featured_image }}
         <figure>
-          <img class="post__featured-image" alt="{{ if .Params.featured_image_alt }}{{.Params.featured_image_alt}}{{end}}" src="{{.Params.featured_image}}">
+          <img class="post__featured-image" alt="{{ if .Params.featured_image_alt }}{{.Params.featured_image_alt}}{{end}}" src="/{{.Params.featured_image}}">
           {{ if .Params.featured_image_caption }}
           <figcaption class="post__featured-image-caption">{{.Params.featured_image_caption}}</figcaption>
           {{ end }}
@@ -20,7 +20,7 @@
       <div class="post__footer">
         <p class="post__postscript">I'm James Shakespeare. I build websites and write about technology. If you've read this far, you should consider following me on <a href="//twitter.com/jeshake/" target="_blank">Twitter</a>.</p>
         <p>
-          <a href="/posts/" class="cta">See more posts<span class="cta__decoration" aria-hidden="true"></span></a>
+          <a rel="index" href="/posts/" class="cta">See more posts<span class="cta__decoration" aria-hidden="true"></span></a>
         </p>
       </div>
 	  </article>
