--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -18,6 +18,7 @@
 	  	  {{.Content}}
       </div>
       <div class="post__footer">
+        <hr class="post__footer-hr">
         <p class="post__postscript">I'm James Shakespeare. I build websites and write about technology. If you've read this far, you should consider following me on <a href="//twitter.com/jeshake/" target="_blank">Twitter</a>.</p>
         <p>
           <a rel="index" href="/posts/" class="cta">See more posts<span class="cta__decoration" aria-hidden="true"></span></a>
