--- a/assets/sass/common/decoration.scss
+++ b/assets/sass/common/decoration.scss
@@ -51,6 +51,7 @@
 		position: absolute;
 		left: -$page-margin-mobile;
 		line-height: inherit;
+		color: var(--accent-1);
 
 		@include larger-than(mobile) {
 			left: -$page-margin-tablet + 0.666666em;
