--- a/assets/sass/components/nav.scss
+++ b/assets/sass/components/nav.scss
@@ -4,8 +4,11 @@
 	@include larger-than(mobile) {
 		display: flex;
 	}
-}
 
+	&.nav__items--home {
+		display: flex;
+	}
+}
 .nav__item {
 	margin-right: 1em;
 	white-space: nowrap;
