--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,7 +7,7 @@
         </a>
         <p class="homepage-header__subtitle">James Shakespeare builds websites, like this one. He is from London and works at <a href="https://qz.com/user/777129/">Quartz</a> in New York.</p>
         <nav class="nav">
-          <ul class="nav__items">
+          <ul class="nav__items nav__items--home">
             <li class="nav__item">
               <a href="/about/">About</a>
             </li>
