fix featured image paths again, centralize decoration char

--- a/assets/sass/base/config.scss
+++ b/assets/sass/base/config.scss
@@ -5,3 +5,4 @@ $page-margin-tablet: 2em;
 $base-font: 'PT Sans';
 $code-font: 'Ubuntu Mono', 'Courier New', monospace;
 $display-font: 'Overpass', sans-serif;
+$decoration-character: '▰';
