--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -25,6 +25,8 @@
     <style>{{ .Content | safeCSS }}</style>
     {{ end }}
     <link rel="alternate" type="application/rss+xml" title="jshakespeare.com blog RSS" href="/posts/index.xml" />
+    <link rel="icon" href="/favicon.png" type="image/png" />
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
   </head>
   <body>
     <a href="#main" class="skip-link">Skip to content</a>
