--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -20,7 +20,7 @@
     <meta property="article:author" content="James Shakespeare" />
     {{ if .Date }}<meta property="article:published_time" content="{{ .Date.Format "2006-01-02T15:04:05Z0700" }}" />{{ end }}
     {{ end }}
-    <meta name="twitter:site" content="jeshake">
+    <meta name="twitter:site" content="@jeshake">
     {{ with resources.Get "sass/main.scss" | toCSS | minify }}
     <style>{{ .Content | safeCSS }}</style>
     {{ end }}
