--- a/layouts/index.html
+++ b/layouts/index.html
@@ -30,7 +30,7 @@
     </section>
     <section class="homepage-content__section">
       <h2 class="homepage-content__section-heading">Projects</h2>
-      <p>I have made lots of things some things I have made include...</p>
+      <p><p>I do my best to keep this site updated with a list of things I’ve made, both for other people and for myself. Recent work that I’m proud of includes <a href="https://qz.com/1345184/version-5-of-qz-com-faster-smarter-and-ready-for-the-future/">the 2018 rebuild of qz.com in React</a>, a one-off editorial feature for Quartz called <a href="https://qz.com/is/the-world-in-50-years/">The World in 50 Years</a> and a site that renders a pictogram of <a href="https://moontonight.co/">tonight’s moon phase using CSS</a>.</p></p>
       <a class="cta" href="/projects/">More projects<span class="cta__decoration" aria-hidden="true"></span></a>
     </section>
     <section class="homepage-content__section">
