disney earth nitpicks, highlighting css fix

--- a/assets/sass/base/defaults.scss
+++ b/assets/sass/base/defaults.scss
@@ -31,8 +31,8 @@ Peach to teal:
 }
 
 ::selection {
-  background: var(--foreground, black);
-  color: var(--accent-2, white);
+  background: var(--accent-2, black);
+  color: var(--background, white);
 }
 
 body {
