--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -10,6 +10,7 @@
 @import "base/pygments";
 @import "components/cta";
 @import "components/footer";
+@import "components/form";
 @import "components/header";
 @import "components/homepage-content";
 @import "components/homepage-header";
