add mailing list form to post footer, copy wip

--- a/layouts/partials/mailchimp.html
+++ b/layouts/partials/mailchimp.html
@@ -6,7 +6,6 @@
 	name="mc-embedded-subscribe-form"
 	target="_blank"
 >
-	<p>Enter your <label class="form__label" for="email-sigup">email address</label> to be notified when I publish new posts:</p>
 	<div class="form__row">
 		<input
 			class="form__input"
@@ -20,6 +19,6 @@
 		<div style="position: absolute; left: -5000px;" aria-hidden="true">
 			<input type="text" name="b_03813a754ece4043e884caab7_c93a553139" tabindex="-1" value="">
 		</div>
-		<button class="cta--small" type="submit">Subscribe<span class="cta__decoration" aria-hidden="true"></span></button>
+		<button class="form__submit" type="submit">Subscribe<span class="cta__decoration" aria-hidden="true"></span></button>
 	</div>
 </form>
