--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -22,7 +22,9 @@
         </div>
         <div class="post__footer">
           <hr class="post__footer-hr">
-          <p class="post__postscript">I'm James Shakespeare. I build websites and write about technology. If you've read this far, you should consider following me on <a href="//twitter.com/jeshake/" target="_blank">Twitter</a>.</p>
+          <h2>Like and subscribe</h2>
+          <p class="post__postscript">I'm James Shakespeare. I build websites and write about technology. If you've read this far, you should consider following me on <a href="//twitter.com/jeshake/" target="_blank">Twitter</a>, adding my <a href="//posts/index.xml">RSS feed</a>, or subscribing to my mailing list:</p>
+          {{ partial "mailchimp.html" }}
           <p>
             <a rel="index" href="/posts/" class="cta">See more posts<span class="cta__decoration" aria-hidden="true"></span></a>
           </p>
