--- a/layouts/posts/list.html
+++ b/layouts/posts/list.html
@@ -5,6 +5,7 @@
       <h1 class="page__heading">{{.Title}}</h1>
       <p>Occasionally I write essays about design, technology, and other things that pique my interest. Subscribe to my mailing list and I’ll send you periodic emails when I publish something new.</p>
       <h2>Subscribe</h2>
+      <p>Enter your email address to be notified when I publish new posts:</p>
       {{ partial "mailchimp.html" }}
     	<h2>All posts</h2>
       <ul class="post-list">
