--- a/layouts/posts/list.html
+++ b/layouts/posts/list.html
@@ -3,7 +3,7 @@
   	{{ partial "nav.html" }}
     <main id="main">
       <h1 class="page__heading">{{.Title}}</h1>
-      <p>Occasionally I write essays about design, technology, and other things that pique my interest. Subscribe to my mailing list and I’ll send you periodic emails when I publish something new.</p>
+      <p>Occasionally I write essays about design, technology, and other things that pique my interest. Subscribe to my mailing list and I’ll send you an email when I publish something new.</p>
       <h2>Subscribe</h2>
       <p>Enter your email address to be notified when I publish new posts:</p>
       {{ partial "mailchimp.html" }}
