--- a/assets/sass/common/decoration.scss
+++ b/assets/sass/common/decoration.scss
@@ -13,9 +13,9 @@
 		width: 100%;
 		height: 100%;
 		z-index: -1;
-		background-color: rgba(0, 0, 0, 0.9);
-		bottom: $border-width * -2;
-		right: $border-width * -2;
+		background-color: var(--shadow, black);
+		bottom: $border-width * -1 - 0.25em;
+		right: $border-width * -1 - 0.25em;
 	}
 }
 
