better hover styles

--- a/assets/sass/base/defaults.scss
+++ b/assets/sass/base/defaults.scss
@@ -52,7 +52,7 @@ a, label {
   text-decoration: underline;
   
   &:hover {
-    text-decoration-color: var(--accent-2);
+    color: var(--accent-2);
   }
 }
 
