--- a/assets/sass/components/cta.scss
+++ b/assets/sass/components/cta.scss
@@ -11,6 +11,7 @@ $cta-border-width: 0.166666em;
 	position: relative;
 	font-style: normal;
 	cursor: pointer;
+	line-height: 1.3;
 
 	&:hover {
 		color: var(--accent-2);
@@ -18,7 +19,7 @@ $cta-border-width: 0.166666em;
 
 	&::after {
 		content: '☞';
-		margin-left: 1em;
+		margin-left: 0.75em;
 		font-size: 2em;
 		line-height: 1;
 	}
