--- a/assets/sass/components/header.scss
+++ b/assets/sass/components/header.scss
@@ -2,6 +2,10 @@
 	font-family: $display-font;
 	margin: 2em 0;
 
+	@include larger-than(mobile) {
+		margin: 4em 0;
+	}
+
 	@include larger-than(tablet) {
 		margin: 6em 0;
 	}
