--- a/layouts/partials/mailchimp.html
+++ b/layouts/partials/mailchimp.html
@@ -7,18 +7,22 @@
 	target="_blank"
 >
 	<div class="form__row">
-		<input
-			class="form__input"
-			id="email-sigup"
-			name="EMAIL"
-			placeholder="E.g. j@jshakespeare.com"
-			required
-			type="email"
-		>
+		<div class="form__item">
+			<input
+				class="form__input"
+				id="email-sigup"
+				name="EMAIL"
+				placeholder="E.g. j@jshakespeare.com"
+				required
+				type="email"
+			>
+		</div>
 		<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 		<div style="position: absolute; left: -5000px;" aria-hidden="true">
 			<input type="text" name="b_03813a754ece4043e884caab7_c93a553139" tabindex="-1" value="">
 		</div>
-		<button class="form__submit" type="submit">Subscribe<span class="cta__decoration" aria-hidden="true"></span></button>
+		<div class="form__item">
+			<button class="form__submit" type="submit">Subscribe<span class="cta__decoration" aria-hidden="true"></span></button>
+		</div>
 	</div>
 </form>
