working on post page copy

--- a/layouts/posts/list.html
+++ b/layouts/posts/list.html
@@ -3,7 +3,8 @@
   	{{ partial "nav.html" }}
     <main id="main">
       <h1 class="page__heading">{{.Title}}</h1>
-      <p>Occasionally I write essays about design, technology, and other things that pique my interest. Subscribe to my mailing list and I’ll send you an email when I publish something new.</p>
+      <p>Occasionally I write about design, technology, and things completely unrelated to either design or technology.</p>
+      <p>Recently I have written about <a href="/the-meg-ryan-effect/">how British society owes Meg Ryan an apology</a>, <a href="/finding-a-voice/">learning to write like I speak</a>, and <a href="/disney-earth/">what happens when Disney cruise ships sail to remote Icelandic towns</a>.</p>
       <h2>Subscribe</h2>
       <p>Enter your email address to be notified when I publish new posts:</p>
       {{ partial "mailchimp.html" }}
