--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -22,12 +22,9 @@
         </div>
         <div class="post__footer">
           <hr class="post__footer-hr">
-          <h2>Like and subscribe</h2>
-          <p class="post__postscript">I'm James Shakespeare. I build websites and write about technology. If you've read this far, you should consider following me on <a href="//twitter.com/jeshake/" target="_blank">Twitter</a>, adding my <a href="//posts/index.xml">RSS feed</a>, or subscribing to my mailing list:</p>
+          <p>I'm James Shakespeare. I build websites and write about design, technology and other things. If you’ve read this far you should consider following me on <a href="//twitter.com/jeshake/" target="_blank">Twitter</a>.</p>
+          <p>You can also subscribe to my mailing list to receive notifications when I publish a new post (one or two a month):</p>
           {{ partial "mailchimp.html" }}
-          <p>
-            <a rel="index" href="/posts/" class="cta">See more posts<span class="cta__decoration" aria-hidden="true"></span></a>
-          </p>
         </div>
   	  </article>
     </main>
