remove email frequency, i don't know it yet

--- a/layouts/posts/list.html
+++ b/layouts/posts/list.html
@@ -6,7 +6,7 @@
       <p>I write about design, technology, and things completely unrelated to either design or technology.</p>
       <p>Recently I have written about <a href="/the-meg-ryan-effect/">why Britain owes Meg Ryan an apology</a>, <a href="/finding-a-voice/">how to write like you speak</a>, and <a href="/disney-earth/">what happens when Disney cruise ships sail to remote Icelandic towns</a>.</p>
       <h2>Subscribe</h2>
-      <p>Enter your email address to receive new posts in your inbox (one or two a month):</p>
+      <p>Enter your email address to receive new posts in your inbox:</p>
       {{ partial "mailchimp.html" }}
     	<h2>All posts</h2>
       <ul class="post-list">
