--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -23,7 +23,7 @@
         <div class="post__footer">
           <hr class="post__footer-hr">
           <p>I'm James Shakespeare. I build websites and write about design, technology and other things. If you’ve read this far you should consider following me on <a href="//twitter.com/jeshake/" target="_blank">Twitter</a>.</p>
-          <p>You can also subscribe to my mailing list to receive notifications when I publish a new post (one or two a month):</p>
+          <p>You can also subscribe to my mailing list to receive notifications when I publish a new post:</p>
           {{ partial "mailchimp.html" }}
         </div>
   	  </article>
