assign shadow width to a var

--- a/assets/sass/base/config.scss
+++ b/assets/sass/base/config.scss
@@ -6,3 +6,4 @@ $base-font: 'PT Sans';
 $code-font: 'Ubuntu Mono', 'Courier New', monospace;
 $display-font: 'Overpass', sans-serif;
 $decoration-character: '▰';
+$shadow-width: 0.25em;
