--- a/assets/sass/base/defaults.scss
+++ b/assets/sass/base/defaults.scss
@@ -61,7 +61,7 @@ figure {
 
   img {
     display: block;
-    box-shadow: 0.333333em 0.333333em 0 0 rgba(0, 0, 0, 0.9);
+    box-shadow: $shadow-width $shadow-width 0 0 var(--shadow, black);
   }
 
   figcaption {
