--- a/assets/sass/components/form.scss
+++ b/assets/sass/components/form.scss
@@ -7,10 +7,14 @@
 	flex-wrap: wrap;
 	justify-content: stretch;
 	margin-bottom: -1em;
+	margin-right: -$page-margin-mobile;
+
+	@include larger-than(mobile) {
+		margin-right: -$page-margin-tablet;
+	}
 }
 
 .form__item {
-
 	margin-right: $page-margin-mobile;
 	flex-grow: 1;
 
