--- a/assets/sass/components/post.scss
+++ b/assets/sass/components/post.scss
@@ -41,6 +41,7 @@
 	pre {
 		padding: $page-margin-mobile;
 		margin: 2em $page-margin-mobile * -1;
+		overflow: auto;
 
 		@include larger-than(mobile) {
 			padding: $page-margin-tablet;
