--- a/layouts/index.html
+++ b/layouts/index.html
@@ -21,7 +21,7 @@
       <div class="homepage-header__decoration" aria-hidden="true"></div>
     </div>
   </header>
-  <div class="page homepage-content">
+  <main class="page homepage-content">
     <section class="homepage-content__section">
       <h2 class="homepage-content__section-heading">About</h2>
       <!-- Note that the content for index.html, as a sort of list page, will pull from content/_index.md -->
@@ -50,5 +50,5 @@
         <a class="cta" href="/posts/">All posts<span class="cta__decoration" aria-hidden="true"></span></a>
       </p>
     </section>
-  </div>
+  </main>
 {{ end }}
