--- a/layouts/partials/mailchimp.html
+++ b/layouts/partials/mailchimp.html
@@ -8,6 +8,7 @@
 >
 	<div class="form__row">
 		<div class="form__item">
+			<label class="form__label" for="email-sigup">Email address:</label>
 			<input
 				class="form__input"
 				id="email-sigup"
