remove link to old qz user profile

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,7 +4,7 @@
       <a class="homepage-header__permalink" href="{{.Site.BaseURL}}">
         <h1 class="homepage-header__title">jshakespeare.com</h1>
       </a>
-      <p class="homepage-header__subtitle">James Shakespeare builds websites, like this one. He is from London and works at <a href="https://qz.com/user/777129/">Quartz</a> in New York.</p>
+      <p class="homepage-header__subtitle">James Shakespeare builds websites, like this one. He is from London and works at <a href="https://qz.com/">Quartz</a> in New York.</p>
       <nav class="nav">
         <ul class="nav__items nav__items--home">
           <li class="nav__item">
